// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover all props renders 1`] = `
<Displaced
  alignment="top"
  allowPlacementAxisChange={false}
  containWithinViewport={false}
  getAnchorElement={[Function]}
  getContainingElement={[Function]}
  hasPointer={false}
  hideWhenAnchorIsOffscreen={true}
  mounted={true}
  onElement={[Function]}
  placement="left"
  pointerColor="#fff"
>
  <div
    className="color-text shadow-darken25 round"
    data-popover-id={4}
    data-test={true}
    key="body"
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="dialog"
    style={
      Object {
        "backgroundColor": "#fff",
      }
    }
    tabIndex={-1}
  >
    <div
      className="w240 h240"
    >
      test popover
    </div>
  </div>
</Displaced>
`;

exports[`Popover basic renders 1`] = `
<Displaced
  alignment="top"
  allowPlacementAxisChange={true}
  containWithinViewport={true}
  getAnchorElement={[Function]}
  hasPointer={true}
  hideWhenAnchorIsOffscreen={false}
  mounted={true}
  onElement={[Function]}
  placement="right"
  pointerColor="#fff"
>
  <div
    className="color-text shadow-darken25 round px12 py12"
    data-popover-id={1}
    key="body"
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="dialog"
    style={
      Object {
        "backgroundColor": "#fff",
      }
    }
    tabIndex={-1}
  >
    <div
      className="w240 h240"
    >
      test popover
    </div>
  </div>
</Displaced>
`;

exports[`Popover dark renders 1`] = `
<Displaced
  alignment="top"
  allowPlacementAxisChange={true}
  containWithinViewport={true}
  getAnchorElement={[Function]}
  hasPointer={true}
  hideWhenAnchorIsOffscreen={false}
  mounted={true}
  onElement={[Function]}
  placement="right"
  pointerColor="#273d56"
>
  <div
    className="color-white shadow-darken25 round px12 py12"
    data-popover-id={2}
    key="body"
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="dialog"
    style={
      Object {
        "backgroundColor": "#273d56",
      }
    }
    tabIndex={-1}
  >
    <div
      className="w240 h240"
    >
      test popover
    </div>
  </div>
</Displaced>
`;

exports[`Popover warning renders 1`] = `
<Displaced
  alignment="top"
  allowPlacementAxisChange={true}
  containWithinViewport={true}
  getAnchorElement={[Function]}
  hasPointer={true}
  hideWhenAnchorIsOffscreen={false}
  mounted={true}
  onElement={[Function]}
  placement="right"
  pointerColor="#FFF5A0"
>
  <div
    className="color-text shadow-darken25 round px12 py12"
    data-popover-id={3}
    key="body"
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="dialog"
    style={
      Object {
        "backgroundColor": "#FFF5A0",
      }
    }
    tabIndex={-1}
  >
    <div
      className="w240 h240"
    >
      test popover
    </div>
  </div>
</Displaced>
`;
